syntax = "proto3";

package blog.v1;

message Post {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CreatePostRequest {
  string description = 1;
  string name = 2;
}

message CreatePostResponse {
  Post post = 1;
}

message DeletePostRequest {
  string id = 1;
}

message DeletePostResponse {
  Post post = 1;
}

message GetPostRequest {
  string id = 1;
}

message GetPostResponse {
  Post post = 1;
}


message LikePostRequest {
  string id = 1;
  string user_id = 2;
}

message LikePostResponse {
  Post post = 1;
}
